--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^0.17.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.2",
+    "cytoscape": "^3.2.8",
+    "cytoscape-edgehandles": "^3.2.0",
+    "jointjs": "^2.0.1",
     "lodash": "^4.17.4",
     "pug": "^2.0.0-rc.4",
     "vue": "^2.5.2",
